fixed slight issues in pom.